# sudoku-solver-but-in-C

./: CMakeLists.txt
include/: board_generator.h  print.h  solver.h
src/: board_generator.c  main.c  print.c  solver.c
